[project]
name = "tiny-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "math-verify>=0.8.0",
    "ruff>=0.14.10",
    "trl>=0.26.2; platform_system != 'Linux'",
    "trl[vllm]>=0.26.2; platform_system == 'Linux'",
    "wandb>=0.23.1",
]